Namespaces
* Server-side support for namespaces + RESTful API
* Tests
* Updated documentation

CLI support will be added in a later commit.

In addition: update to README and CONTRIBUTING.
